<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all_app"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_ingresoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/ingreseNombre"
        android:textColorHint="@color/cardview_light_background"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/md_theme_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_light_background"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_ingresoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/ingreseCorreo"
        android:textColorHint="@color/cardview_light_background"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/md_theme_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingresoNombre"
        app:layout_constraintVertical_bias="0.109">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_correoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_light_background"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_principalPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/contrase_a"
        android:textColorHint="@color/cardview_light_background"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/cardview_light_background"
        app:hintTextColor="@color/md_theme_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingresoCorreo"
        app:layout_constraintVertical_bias="0.124">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_passwordPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/md_theme_light_background"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_secundarioPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/verificarPassword"
        android:textColorHint="@color/cardview_light_background"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/cardview_light_background"
        app:hintTextColor="@color/md_theme_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_principalPassword"
        app:layout_constraintVertical_bias="0.179">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_passwordVerificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/md_theme_light_background"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="193dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/authentication"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:background="@drawable/botones_main"
        android:text="Registrarse"
        android:textColor="@color/md_theme_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_secundarioPassword"
        app:layout_constraintVertical_bias="0.575"
        tools:ignore="HardcodedText,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>